# snakelib_ros2

./: summon_the_beast.sh
snakelib_bullet/: package.xml  setup.cfg  setup.py
snakelib_bullet/launch/: pybullet_interface.launch.py
snakelib_bullet/param/: sim_params.yaml
snakelib_bullet/snakelib_bullet/: pybullet_interface.py
snakelib_camera/: package.xml  setup.cfg  setup.py
snakelib_camera/launch/: camera.launch.py
snakelib_camera/param/: camera_params.yaml
snakelib_camera/scripts/: camera_interface.py  camera_utils.py  image_processing.py  streaming_utils.py  thermal_camera_interface.py  usb_camera_interface.py  video_capture.py
snakelib_camera/snakelib_camera/: fisheye_node.py  image_processing_node.py  pinhole_node.py  thermal_node.py  toggle_streaming.py
snakelib_control/: package.xml  setup.cfg  setup.py
snakelib_control/gaitlib/: gaitlib.py
snakelib_control/launch/: joystick_pybullet.launch.py  reu_pybullet_demo.launch.py  snake_demo.launch.py  snake_demo_lite.launch.py
snakelib_control/param/: joy_to_gait.yaml  launch_params.yaml  snake_params.yaml
snakelib_control/pykdl_utils/: joint_kinematics.py  kdl_parser.py
snakelib_control/scripts/: gaitlib_controller.py  utils.py  (+1 more)
snakelib_debug/: package.xml  setup.cfg  setup.py
snakelib_description/: package.xml  setup.cfg  setup.py
snakelib_gui/: package.xml  setup.cfg  setup.py
snakelib_hebi/: package.xml  setup.cfg  setup.py
snakelib_msgs/: CMakeLists.txt  package.xml
snakelib_srvs/: CMakeLists.txt  package.xml
snakelib_terrain/: package.xml  setup.cfg  setup.py
(+60 files in other folders)
