<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snakelib_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joelgeorgekal@gmail.com">joel</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>snakelib_srvs</depend>
  <depend>snakelib_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>snakelib_hebi</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
